tests/paczka1/small_fuzzy/91086384.err
Error in line 5: imEEDKnoYjR S582 111,25
